--- a/parts/client/reddit.jade
+++ b/parts/client/reddit.jade
@@ -15,11 +15,11 @@ template(name="reddit_doc")
             if embed
                 .rounded.full
                     |!{embed}
-            // else
-            if is_image
-                img.ui.centered.image.pointer.zoomer.toggle_view(src=url)
-            else if watson.metadata.image
-                img.ui.rounded.pointer.zoomer.image.toggle_view(src=watson.metadata.image)    
+            else
+                if is_image
+                    img.ui.centered.image.pointer.zoomer.toggle_view(src=url)
+                else if watson.metadata.image
+                    img.ui.rounded.pointer.zoomer.image.toggle_view(src=watson.metadata.image)    
     
             .content
                 span.ui.pointer.text.f13.zoomer.toggle_view(class=post_header_class) !{title}
@@ -48,11 +48,11 @@ template(name="reddit_doc")
                                 | Twitter Support you must have the patience of 1000 camels waiting for a drink of water while the baby camels get the first drinks...does that make sense? Thank you for your dedication and time you selfishly give to each of us. You are always appreciated.
                             | — KayeMc76 (@KayeMc76) 
                             a(href=url) October 3, 2020
-                    else if is_youtube
-                        div
-                        .ui.fluid.embed
-                            iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
-                        iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                        // else if is_youtube
+                        //     div
+                        //     // .ui.fluid.embed
+                        //     //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
+                        //     iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                     else if is_video
                         div
                         // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
