round of elemental icons buttons

--- a/parts/client/blocks.jade
+++ b/parts/client/blocks.jade
@@ -97,15 +97,15 @@ template(name='sbt')
                 
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.zoomer.compact.button.set_session_v(class=calculated_class title=t)
+    .ui.zoomer.compact.icon.button.set_session_v(class=calculated_class title=t)
         if i
             // i.icon(class=icon)
-            +i n=i cl='ui mini inline image'
-        unless ionly
-            if l
-                |#{l}
-            else 
-                |#{v}
+            +i n=i cl='ui inline image'
+        // unless ionly
+        //     if l
+        //         |#{l}
+        //     else 
+        //         |#{v}
 
                         
 
