--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -195,7 +195,7 @@ template(name='view_mode')
         // |#{k}
 
 template(name='emotion_mode')
-    .ui.compact.icon.big.button.toggle_emotion
+    .ui.compact.icon.big.circular.basic.button.toggle_emotion
         i.link.zoomer.icon(class="#{toggle_emotion_class} #{thinking_class}" title=t)
         // |#{k}
     // if selected_emotion
